# sudoku-solver-hask

./: Makefile  README.md  matti-sudoku.cabal  stack.yaml  sudoku.cabal
samples/: reallyhard
samples/garden/: sample000  sample001  sample002  sample003  sample004  sample005  sample006  sample007  sample008  sample009  sample010  sample011  sample012  sample013  sample014  sample015  sample016  sample017  sample018  sample019  sample020  sample021  sample022  sample023  sample024  sample025  sample026  sample027  sample028  sample029  sample030  sample031  sample032  sample033  sample034  sample035  sample036  sample037  sample038  sample039  (+960 more)
src/: Search.hs  Sudoku.hs  basudoku.hs  blength.c  blength.h  deduction.hs  heuristic.hs  sudoku.hs
