Name:                matti-sudoku
Version:             0.1
License:             PublicDomain
Build-type:          Simple
Cabal-version:       >=1.2

Executable mysudoku
  hs-source-dirs: src
  main-is: heuristic.hs
  other-modules: Sudoku
                 Search

  Build-depends:
    base                      >= 4     && < 5,
    containers -any,
    vector -any,
    mtl                       >= 2     && < 3

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
